# triabolical-code-mods

./: Cargo.toml
src/: accessory.rs  ai.rs  arena.rs  bgm.rs  character.rs  configmenu.rs  cook.rs  cutscene.rs  events.rs  exp.rs  game_var_i.rs  gift.rs  gmapshop.rs  hash.rs  help.rs  hub.rs  level.rs  lib.rs  map.rs  mapsave.rs  menus.rs  misc.rs  persondata.rs  rng.rs  skill.rs  sortie.rs  string.rs  support.rs  utils.rs
src/configmenu/: ai.rs  bgm.rs  cook.rs  cutscene.rs  dlc.rs  exp.rs  fish.rs  gender.rs  gift.rs  growth.rs  level.rs  map.rs  rng.rs  smash.rs  support.rs
src/help/: ai.rs  battle.rs  deathlist.rs  item.rs  jobgrow.rs  level.rs
src/hub/: collector.rs  data.rs  music.rs  quickmenu.rs
src/hub/quickmenu/: animal.rs  arena.rs  cafe.rs  dragonride.rs  fishing.rs  godroom.rs  hubshops.rs  mascot.rs  muscle.rs  noticeboard.rs  well.rs
src/hub/quickmenu/cafe/: chef.rs
src/hub/quickmenu/mascot/: food.rs  strok.rs
src/sortie/: accessory.rs  shop.rs
